aykroyd/tests/from-row/column-index-some.stderr
error: expected column index
 --> tests/from-row/column-index-some.rs:7:15
  |
7 |     column_0: i32,
  |               ^^^
